approvedOriginStore is moved into a bean #20