@@ -1,8 +1,6 @@
 package gov.epa.ccte.api.chemical.security;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import gov.epa.ccte.api.chemical.domain.ApiKey;
-import gov.epa.ccte.api.chemical.repository.ApiKeyRepository;
 import gov.epa.ccte.api.chemical.web.rest.errors.AuthorizationProblem;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -19,7 +17,7 @@ import org.springframework.web.filter.GenericFilterBean;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
@@ -30,28 +28,31 @@ import java.util.concurrent.ConcurrentHashMap;
 public class ApiKeyRequestFilter extends GenericFilterBean {
 
     private final ConcurrentHashMap<UUID, String> keyStore;// = new ConcurrentHashMap();
-    private ConcurrentHashMap<String, String> approvedOriginStore;// = new ConcurrentHashMap();
+    private final ConcurrentHashMap<String, String> approvedOriginStore;// = new ConcurrentHashMap();
     private final ObjectMapper mapper = new ObjectMapper();
     private final String keyName;
 
-    public ApiKeyRequestFilter(ConcurrentHashMap<UUID, String> keyStore, @Value("${application.api-key-name}") String keyName) {
+    public ApiKeyRequestFilter(ConcurrentHashMap<UUID, String> keyStore,
+                               ConcurrentHashMap<String, String> approvedOriginStore,
+                               @Value("${application.api-key-name}") String keyName) {
         this.keyStore = keyStore;
+        this.approvedOriginStore = approvedOriginStore;
         this.keyName = keyName;
 
         //initializeKeyStore(repository);
-        initializeApprovedOriginStore();
+        //initializeApprovedOriginStore();
     }
 
-    private void initializeApprovedOriginStore() {
-        approvedOriginStore = new ConcurrentHashMap<>();
-        approvedOriginStore.put("http://localhost:3003", "http://localhost:3003");
-        approvedOriginStore.put("http://localhost:8888", "http://localhost:8888");
-        approvedOriginStore.put("https://ccte-ccd-dev.epa.gov", "https://ccte-ccd-dev.epa.gov");
-        approvedOriginStore.put("https://ccte-ccd-stg.epa.gov", "https://ccte-ccd-stg.epa.gov");
-        approvedOriginStore.put("https://ccte-ccd-prod.epa.gov", "https://ccte-ccd-prod.epa.gov");
-        approvedOriginStore.put("https://comptox.epa.gov", "https://comptox.epa.gov");
-        approvedOriginStore.put("https://ccte-api-s.app.cloud.gov", "https://ccte-api-s.app.cloud.gov");
-    }
+//    private void initializeApprovedOriginStore() {
+//        approvedOriginStore = new ConcurrentHashMap<>();
+//        approvedOriginStore.put("http://localhost:3003", "http://localhost:3003");
+//        approvedOriginStore.put("http://localhost:8888", "http://localhost:8888");
+//        approvedOriginStore.put("https://ccte-ccd-dev.epa.gov", "https://ccte-ccd-dev.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-stg.epa.gov", "https://ccte-ccd-stg.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-prod.epa.gov", "https://ccte-ccd-prod.epa.gov");
+//        approvedOriginStore.put("https://comptox.epa.gov", "https://comptox.epa.gov");
+//        approvedOriginStore.put("https://ccte-api-s.app.cloud.gov", "https://ccte-api-s.app.cloud.gov");
+//    }
 
 //    private void initializeKeyStore(ApiKeyRepository repository) {
 //        keyStore = new ConcurrentHashMap<>();
@@ -94,12 +95,12 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             String key = getApiKeyfromHttpHeader(req.getHeader(keyName));
 
             // In case user is provided api key through parameter x-api-key
-            if (key == null || key.equals("")) {
+            if (key == null || key.isEmpty()) {
                 // get key from the URL parameter
                 key = getApiKeyFromQueryParam(req.getQueryString());
             }
 
-            if (key == null || key.equals("")) {
+            if (key == null || key.isEmpty()) {
                 // api key is missing
                 returnErrorMsg(servletResponse, key);
             } else if (isKeyExist(key)) {
@@ -124,7 +125,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
         String path = Optional.ofNullable(req.getServletPath()).orElse(""); // example - path = /chemical/file/image/search/by-dtxsid/DTXSID7020182
 
         String refererdHost;
-        if(!referer.equals("")){
+        if(!referer.isEmpty()){
             refererdHost = "https://" + referer.split("/")[2];  // example - referredHost = localhost:8888
         }else{
             refererdHost = ""; //"https://" + req.getHeader("Referer").split("/")[2];  // example - referredHost = localhost:8888
@@ -138,7 +139,8 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             return false;
         }
 
-        if(method.equalsIgnoreCase("OPTIONS") || approvedOrigin(origin) || approvedOrigin(refererdHost))
+//        if(method.equalsIgnoreCase("OPTIONS") || approvedOrigin(origin) || approvedOrigin(refererdHost))
+        if(approvedOrigin(origin) || approvedOrigin(refererdHost))
             return false;
         else
             return true;
@@ -160,7 +162,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             for(String param: params){
                 int idx = param.indexOf("=");
                 if(param.substring(0,idx).equalsIgnoreCase(keyName)){
-                    return URLDecoder.decode(param.substring(idx + 1),"UTF-8");
+                    return URLDecoder.decode(param.substring(idx + 1), StandardCharsets.UTF_8);
                 }
             }
         }
@@ -171,7 +173,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
         // Get apikey from the http header
         //String key = req.getHeader(keyName) == null ? "" : req.getHeader(keyName);
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             log.debug("Custom http  header {} not found", keyName);
         }
 
@@ -183,7 +185,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
 
         AuthorizationProblem problem;
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             // header is missing
             problem = AuthorizationProblem.builder()
                     .title("API Header Not Found")
